Fix contrast errors

--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -72,7 +72,7 @@ nav div {
 
 nav a {
   display: block;
-  color: #FFFFFF;
+  color: #000000;
   font-family: 'Outfit';
   font-size: 18px;
   text-align: center;
